src/objects/TeamForce_Release__c.object
<CustomObject>
    <description>Used to track releases and dates along with them.</description>
    <fields>
        <fullName>CommunicationDate__c</fullName>
        <description>Add the date when communication will happen out to the business</description>
        <inlineHelpText>Add the date when communication will happen out to the business</inlineHelpText>
        <label>Communication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DevelopmentFreezeDate__c</fullName>
        <description>Date when development is frozen for the release - after this date no new things should be added to the release</description>
        <inlineHelpText>Date when development is frozen for the release - after this date no new things should be added to the release</inlineHelpText>
        <label>Development Freeze Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <description>The date when this release will go into production</description>
        <inlineHelpText>The date when this release will go into production</inlineHelpText>
        <label>Release Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StagingStartDate__c</fullName>
        <description>Date when the move into Staging for this release will start</description>
        <inlineHelpText>Date when the move into Staging for this release will start</inlineHelpText>
        <label>Staging Start Date</label>
        <type>Date</type>
    </fields>
    <label>TeamForce Release</label>
    <nameField>
        <label>TeamForce Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TeamForce Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>